Name:           hsig2dot
Version:        0

License:        OtherLicense
License-file:   LICENSE


Build-Type:     Simple
Cabal-Version:  >= 1.2
Tested-With:    GHC == 7.6.1

Executable      hsig2dot
        Main-is:        hsig2dot.hs
-- If the stuff works with the older versions, you're welcome to fix them
        Build-depends:  
                        base >= 4 && < 5,
                        containers >= 0.5.0.0 && < 0.6,
                        parsec >= 3.1.3 && < 3.2
